# exportify-cli

./: .gitignore  README.md  config.cfg.RENAME  exportify-cli.py  exportify.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
