[project]
name = "exportify-cli"
version = "v0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "click-option-group>=0.5.7",
    "pyinstaller>=6.13.0",
    "requests>=2.32.3",
    "spotipy>=2.25.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
